	(_cerebrod_pre_calculate_configuration_config_check,
	_cerebrod_calculate_configuration): Move clusterlist module checks
	and calculation from
	_cerebrod_pre_calculate_configuration_config_check to
	_cerebrod_calculate_configuration.

	* src/cerebrod/cerebrod_clusterlist.c (_find_clusterlist_module):
	Fix logic bugs and also search current directory for modules.

2005-03-16  Albert Chu  <chu11@llnl.gov>

	* src/cerbrod/cerebrod_util.h, src/cerbrod/cerebrod_util.c: New
	files.

	* src/cerebrod/cerebrod_listener.c, src/cerebrod_updown.c: Re-work
	with new rehashing common functions.

	* src/cerebrod/Makefile.am: Updated with new files.

	* src/cerebrod/cerebrod_listener.c (cerebrod_listener),
	src/cerebrod/cerebrod.c
	(main): Call appropriate updown server functions.

	* src/cerebrod/cerebrod_clusterlist_genders.c
	(genders_clusterlist_node_in_cluster),
	src/cerebrod/cerebrod_clusterlist_gendersllnl.c
	(gendersllnl_clusterlist_node_in_cluster,
	gendersllnl_clusterlist_get_nodename): Fix memory corruption bug.

	* src/libcommon/wrappers.h, src/libcommon/wrappers.c
	(Pthread_cond_wait, Pthread_cond_signal, wrap_pthread_cond_wait,
	wrap_pthread_cond_signal): New macros and functions.

	* src/cerebrod/Makefile.am: Fix dynamic module symbol problems.

	* src/cerebrod/cerebrod_listener.c
	(_cerebrod_listener_initialization),
	src/cerebrod/cerebrod_updown.c (_cerebrod_updown_initialization),
	src/cerebrod/cerebrod.c (main): Fix pthread logic problem with
	condition variables.

	* src/libcommon/wrappers.c (wrap_list_for_each): Fix debug logic
	error.

	* src/libcommon/argv.h, src/libcommon/argv.c (argv_create,
	argv_destroy, _nextargv, _sizeargv): Re-worked not to use
	wrapper functions.

	* src/libcommon/wrappers.h, src/libcommon/wrappers.c (Argv_create,
	Argv_destroy, wrap_argv_create, wrap_argv_destroy): New macros and
	functions.

	* src/cerebrod/cerebrod_clusterlist_hostsfile.c
	(hostsfile_clusterlist_init),
	src/cerebrod/cerebrod_clusterlist_genders.c